working on publishing section

--- a/Dashboard-V1.1.4/publishing.html
+++ b/Dashboard-V1.1.4/publishing.html
@@ -27,6 +27,7 @@
     <script src="assets/js/respond.min.js"></script>
   <![endif]-->
 </head>
+
 <body>
   <div class="dashboard-wrapper">
     <aside class="dashboard-sidebar sidebar-primary">
@@ -50,7 +51,7 @@
 
      <!-- Menu -->
       <ul class="sidebar-nav">
-        <li>
+        <li class="active">
           <a href="index.html">
             <i class="icon-home"></i>
             Home
@@ -64,7 +65,7 @@
           </a>
         </li>
          <li>
-           <li class="active">
+           <li>
           <a href="tables.html">
             <i class="icon-pin"></i>
             Events
@@ -119,6 +120,8 @@
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
     <!--/. Menu -->
+
+
     <!-- Page content -->
     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -128,143 +131,137 @@
               <button type="button" class="btn navbar-btn btn-link pull-left" data-toggle="sidebar-primary"><i class="fa fa-fw text-white fa-align-justify"></i></button>
             </div><!-- /.col -->
             <div class="col-xs-6 text-center">
-              <a class="navbar-brand" href="tables.html#link">
+              <a class="navbar-brand" href="publishing.html#link">
                 <!-- <img class="brand-logo" alt="Logo" src="assets/img/logo-white.png"> -->
-                <span class="brand-name">Community Events</span>
+                <span class="brand-name">Collaborative writing</span>
               </a>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </nav><!-- /.navbar.navbar-inverse -->
-     <!-- ============================================================= -->
-     <section class="section-xs bg-info">
+
+     <section class="section-xs bg-success">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-tachometer"></i> Inspire on</strong>
+              <strong><i class="fa fa-fw fa-users"></i> We need a <a style="color: #fff000;" href="http://polr.me/2pr" target="_blank"> "Wrapper"</a> volunteer to keep this section updated.
+              If you want to take on this role in the project just ping us <a style="color: #fff000;" href="mailto:fabrizio.terzi@gmail.com"> <i class="fa fa-fw fa-envelope"></i></a></strong>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </section>
-      <!-- ============================================================= -->
-      <!--Calendar-->
+      <!-- ============./topbar================================================= -->
+        <section class="section-sm">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-12">
+              <h1 class="headline">Versus V4.0</h1>
+            </div><!-- /.col -->
+          </div><!-- /.row -->
+
  <section class="section-sm">
         <div class="container">
-          <h2>Scheduling Community Events:</h2>
-         <div class="Flexible-container">
-          <iframe src="https://www.google.com/calendar/embed?src=gsk5sarlpidfebqdahgs2purro%40group.calendar.google.com&ctz=Europe/Rome" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" ></iframe>
-         </div>
-        </div>
-       </section>
-      <section class="section-sm">
-        <div class="container-fluid">
-              <div class="table-responsive">
-                <table class="table table-bordered table-striped">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <h4 class="panel-heading">Ongoing charter activity:</h4>
+                <div class="panel-body">
+                  <p>This is an ongoing collection of article currently included in our handbook. If you enjoy learning by doing and you want to help or collaborate in a particular task, you are very welcome.
+                     Contact directly the people and groups interested in the following list. They will be happy to welcome you and explain to you how you can contribute to the project.     <strong>Inspire on!!</strong>  </p>
+                </div><!-- /.panel-body -->
+                <!-- Table -->
+                <div class="table-responsive">
+                <table class="table table-hover">
                   <thead>
                     <tr>
-                      <th>Events</th>
-                      <th>Frequency</th>
-                      <th>Time & Date</th>
-                      <th>Facilitator & @contact</th>
-                      <th>Invitation</th>
-                      <th>Join</th>
+                      <th>#</th>
+                      <th>Sections</th>
+                      <th>Read</th>
+                      <th>Edit</th>
+                      <th>Review</th>
+                      <th>V3.0</th>
+                      <th>V4.0</th>
+                      <th>Status</th>
+                      <th>Progression</th>
                     </tr>
                   </thead>
                   <tbody>
+                  <!--Foreword-->
                     <tr>
-                      <td>Live session G+</td>
-                      <td>Weekly</td>
-                      <td>Monday-1PM Eastern / 6PM UK</td>
-                      <td><a href="mailto:charlottepierce.com ">Charlotte Pierce - Arlington (U.S.A.)</a></td>
-                      <td>No</td>
-                      <td><a class="btn btn-info btn-sm" href="https://plus.google.com/+PeeragogyOrgHandbook/posts" target="_blank">Join!</a></td>
+                      <td>I</td>
+                      <td>Foreword</td>
+                      <th><a href="https://goo.gl/NrQkqe"target="_blank"><i class="fa fa-book fa-lg"></i></a></th>
+                      <th><a href="https://goo.gl/WbrnaC"target="_blank"><i class="fa fa-pencil fa-lg"></i></a></th>
+                      <th><a href=""target="_blank"><i class="fa fa-eye fa-lg"></i></a></th>
+                      <th><i class="fa fa-check-circle-o fa-lg text-success "></i></th>
+                      <th><i class="fa fa-check-circle-o fa-lg text-warning "></i></th>
+                      <td>Needs Update</td>
+                      <td>
+                        <div class="progress no-margin">
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                            <span class="sr-only">Progress</span>
+                          </div><!-- /.progress-bar -->
+                        </div><!-- /.progress -->
+                      </td>
                     </tr>
+                   <!--Foreword./-->
+                   <!--introduction-->
                      <tr>
-                      <td>MIT App Inventor Peeragogy</td>
-                      <td>MOOc Edx</td>
-                      <td>Starts October 19, 2015 </td>
-                       <td><a href="https://www.edx.org/course/mobile-computing-app-inventor-cs-trinityx-t002x">Enroll now</a></td></td>
-                      <td>No</td>
-                      <td><a class="btn btn-info btn-sm" "https://www.edx.org/course/mobile-computing-app-inventor-cs-trinityx-t002x" target="_blank">Join!</a></td>
+                      <td>I.I</td>
+                      <td>Introduction</td>
+                      <th><a href="https://goo.gl/KL9Z3e"target="_blank"><i class="fa fa-book fa-lg"></i></a></th>
+                      <th><a href="https://goo.gl/UVxxIO"target="_blank"><i class="fa fa-pencil fa-lg"></i></a></th>
+                      <th><a href=""target="_blank"><i class="fa fa-eye fa-lg"></i></a></th>
+                      <th><i class="fa fa-check-circle-o fa-lg text-success "></i></th>
+                      <th><i class="fa fa-check-circle-o fa-lg text-success "></i></th>
+                      <td>Approved</td>
+                      <td>
+                        <div class="progress no-margin">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                            <span class="sr-only">Progress</span>
+                          </div><!-- /.progress-bar -->
+                        </div><!-- /.progress -->
+                      </td>
                     </tr>
-                    <tr>
-                      <td>Technology Team</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
+                      <!--introduction-/-->
+                      <!-summary-->
                      <tr>
-                      <td>Handbook Team</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
+                      <td>I.II</td>
+                      <td>Chapter Summaries</td>
+                      <th><a href="https://goo.gl/KL9Z3e"target="_blank"><i class="fa fa-book fa-lg"></i></a></th>
+                      <th><a href="https://goo.gl/UVxxIO"target="_blank"><i class="fa fa-pencil fa-lg"></i></a></th>
+                      <th><a href=""target="_blank"><i class="fa fa-eye fa-lg"></i></a></th>
+                      <th><i class="fa fa-check-circle-o fa-lg text-success "></i></th>
+                      <th><i class=""></i></th>
+                      <td>Needs Review</td>
+                      <td>
+                        <div class="progress no-margin">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 7%">
+                            <span class="sr-only">Progress</span>
+                          </div><!-- /.progress-bar -->
+                        </div><!-- /.progress -->
+                      </td>
                     </tr>
-                     <tr>
-                      <td>Current Projects</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
-                     <tr>
-                      <td>Design Team</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
-                     <tr>
-                      <td>K12-Focus</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
-                    <tr>
-                      <td>Discussions</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
-                     <tr>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
-                     <tr>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
-                    </tr>
-                  </tbody>
+                     <!--summary-/-->
 
-              </div><!-- /.table-responsive -->
-            </div><!-- /.col -->
-          </div><!-- /.row -->
+
+                       </tbody>
+                     </table>
+                   </div>
+                  <!-- /.panel -->
+                 </div><!-- /.col -->
+                </div><!-- /.progress-bar -->
+              </div><!-- /.progress -->
+
         </div><!-- /.container -->
       </section>
-
-    </table>
-    </main><!-- /.page-content -->
-   <!--./Calendar-->
-
-
+  <!--AudioFoot-->
+        <audio  controls="controls" hidden="hidden" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 1000)" >
+         <source src="http//freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/ogg"></source>
+         <source src="http//freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/mpeg"></source>
+        </audio>
+       <!--./AudioFoot-->
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
@@ -292,6 +289,5 @@
   <script src="assets/chartjs/Chart.min.js"></script>
   <script src="assets/jquery-labelauty/jquery-labelauty.js"></script>
   <script src="assets/js/holder.js"></script>
-  <script src="assets/js/demo.js"></script>
 </body>
 </html>
