--- a/Dashboard-V1.1.4/Collaborate/wraiting/draft.html
+++ b/Dashboard-V1.1.4/Collaborate/wraiting/draft.html
@@ -51,27 +51,33 @@
 
      <!-- Menu -->
       <ul class="sidebar-nav">
-        <li>
-          <a href="../../index.html">
+        <li class="active">
+          <a href="index.html">
             <i class="icon-home"></i>
             Home
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
          <li>
-          <a href="../../task.html">
+          <a href="task.html">
             <i class="icon-target"></i>
            Tasks
           </a>
         </li>
          <li>
            <li>
-          <a href="../../tables.html">
+          <a href="tables.html">
             <i class="icon-pin"></i>
             Events
           </a>
         </li>
-         <li class="../../active">
+        <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
@@ -79,14 +85,27 @@
         </li>
          <li>
            <li>
-          <a href="../../location.html">
+          <a href="location.html">
             <i class="icon-map"></i>
             Members Map
           </a>
         </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+          <li>
+          <a data-toggle="collapse" data-target="#submenu-1">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+          <ul class="sidebar-nav-dropdown collapse" id="submenu-1">
+            <li class="active"><a href="publishing.html"><i class="fa fa-fw fa-angle-right"></i> Index</a></li>
+            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Draft</a></li>
+            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Review</a></li>
+            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Propose</a></li>
+          </ul>
+        </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
            <li>
-          <a href="../../library.html">
+          <a href="library.html">
             <i class=" icon-folder"></i>
             Bookcase
           </a>
@@ -98,14 +117,15 @@
         </li>
         </li>
          <li>
-          <a href="../../flip.html">
+          <a href="flip.html">
             <i class=" icon-eye"></i>
             Flip Handbook
           </a>
         </li>
+          </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
-          <a href="../../faq.html">
+          <a href="faq.html">
             <i class="icon-info"></i>
             FAQs
           </a>
@@ -115,7 +135,7 @@
     <!--/. Menu -->
 
     <!-- Page content -->
-    <main class="page-content">
+     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container">
           <div class="row">
@@ -123,63 +143,120 @@
               <button type="button" class="btn navbar-btn btn-link pull-left" data-toggle="sidebar-primary"><i class="fa fa-fw text-white fa-align-justify"></i></button>
             </div><!-- /.col -->
             <div class="col-xs-6 text-center">
-              <a class="navbar-brand" href="gallery.html#link">
+              <a class="navbar-brand" href="publishing.html#link">
                 <!-- <img class="brand-logo" alt="Logo" src="assets/img/logo-white.png"> -->
-                <span class="brand-name">Learning Git</span>
+                <span class="brand-name">Peeragogy Drafting</span>
               </a>
+            </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </nav><!-- /.navbar.navbar-inverse -->
-     <!-- ============================================================= -->
-     <section class="section-xs bg-info">
+
+      <section class="section-xs bg-info">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-code"></i> Code training</strong>
+              <strong><i class="fa fa-fw fa-pencil"></i> Collaborative writing </strong>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </section>
-      <!-- ============================================================= -->
+
       <section class="section-sm">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
-           <div class="col-md-12">
-              <h3 class="headline"> Try Git right in your web browser.</h3>
-            </div>
-          </div>
-          <br>
-          <div class="video-container-iframe">
-          <iframe src="https://docs.google.com/document/d/1l9hmsq2-3EjucPNKygT8TEk1FUBBLrVQgp6nmtSZqls/pub?embedded=true" style="border:0px #000000 solid;" name="Git" scrolling="no" align="center" height="1200" width="100%"></iframe>
-          </div>
-          <br>
-       <!-- ============================================================= -->
-     <section class="section-xs bg-warning">
-        <div class="container">
+            <div class="col-sm-12">
+              <h1 class="headline">New Draft</h1>
+            </div><!-- /.col -->
+          </div><!-- /.row -->
           <div class="row">
-            <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-smile-o"></i> Have a nice learning</strong>
+            <div class="col-md-8">
+              <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true"><i class="fa fa-fw fa-times-circle"></i></span><span class="sr-only">Close</span></button>
+                <strong><i class="fa fa-fw fa-check-circle-o"></i> Success:</strong> All your changes have been saved!
+              </div><!-- /.alert -->
+              <div class="form-group">
+                <label for="post-title">Chapter Title:</label>
+                <input type="text" class="form-control" id="post-title" placeholder="Title">
+              </div>
+              <div class="form-group">
+                <label for="post-sub-title">Authors:</label>
+                <input type="text" class="form-control" id="post-sub-title" placeholder="Team list">
+              </div>
+              <div class="form-group">
+                <label for="post-featured-image">Featured image</label>
+                <input type="file" id="post-featured-image">
+              </div>
+              <div class="form-group">
+                <label for="post-content">Content:</label>
+                <div class="rtf-editor"></div>
+              </div>
+            </div><!-- /.col -->
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Publish Article</h3>
+                </div><!-- /.panel-heading -->
+                <div class="panel-body">
+                  <p><strong>Status:</strong> Draft</p>
+                  <p><strong>Last updated:</strong> 28/July/2015, 20:36</p>
+                  <p><strong>Visibility:</strong> Plublic</p>
+                </div><!-- /.panel-body -->
+                <div class="meta-row text-center">
+                  <button type="submit" class="btn btn-outline btn-inverse">Save</button>
+                  <button type="submit" class="btn btn-outline btn-inverse">Preview</button>
+                  <button type="submit" class="btn btn-outline btn-danger">Delete article</button>
+                </div><!-- /.panel-footer -->
+                <div class="panel-footer">
+                  <p><button type="submit" class="btn btn-inverse btn-lg btn-block">Publish Now</button></p>
+                </div><!-- /.panel-footer -->
+              </div><!-- /.panel -->
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Meta Data</h3>
+                </div><!-- /.panel-heading -->
+                <div class="panel-body">
+                  <div class="form-group">
+                    <label for="post-tags">Add tags:</label>
+                    <input id="post-title" type="text" class="form-control" value="" data-role="tagsinput">
+                  </div><!-- /.form-group -->
+                  <div class="form-group">
+                    <ul class="list-unstyled">
+                     <li><label for="post-categories">Choose categories:</label></li>
+                      <li><input class="labelauty-no-label" type="checkbox"/> Patterns</li>
+                      <li><input class="labelauty-no-label" type="checkbox"/> Convening</li>
+                      <li><input class="labelauty-no-label" type="checkbox"/> Organizing</li>
+                      <li><input class="labelauty-no-label" type="checkbox"/> Technologies</li>
+                      <li><input class="labelauty-no-label" type="checkbox"/> Co-facilitation</li>
+                    </ul>
+                  </div><!-- /.form-group -->
+                </div><!-- /.panel-body -->
+                <div class="panel-footer">
+                  <button type="submit" class="btn btn-outline btn-inverse">Save Meta</button>
+                </div><!-- /.panel-footer -->
+              </div><!-- /.panel -->
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </section>
- <!-- - Training--============================================================= -->
-      <section class="section-sm">
-          <div class="video-container-iframe">
-          <iframe src="https://training.github.com/kit/" style="border:0px #000000 solid;" name="Git" scrolling="auto" align="center" height="1200" width="100%"></iframe>
-            </div>
-            </div><!-- /.dashboard-wrapper -->
+      </div><!-- /.dashboard-wrapper -->
  <!-- ============================================================= -->
-
-
-    </main><!-- /.page-content -->
-
-
 
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
   <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 
   <!-- Plugins -->
   <script src="../../assets/prism/prism.js"></script>
