--- a/Dashboard-V1.1.4/Collaborate/wraiting/index2.html
+++ b/Dashboard-V1.1.4/Collaborate/wraiting/index2.html
@@ -50,28 +50,34 @@
       </div><!-- /.sidebar-subheader -->
 
      <!-- Menu -->
-      <ul class="sidebar-nav">
-        <li>
-          <a href="../../index.html">
+     <ul class="sidebar-nav">
+        <li class="active">
+          <a href="index.html">
             <i class="icon-home"></i>
             Home
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
          <li>
-          <a href="../../task.html">
+          <a href="task.html">
             <i class="icon-target"></i>
            Tasks
           </a>
         </li>
          <li>
            <li>
-          <a href="../../tables.html">
+          <a href="tables.html">
             <i class="icon-pin"></i>
             Events
           </a>
         </li>
-         <li class="../../active">
+        <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
@@ -79,14 +85,27 @@
         </li>
          <li>
            <li>
-          <a href="../../location.html">
+          <a href="location.html">
             <i class="icon-map"></i>
             Members Map
           </a>
         </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+          <li>
+          <a data-toggle="collapse" data-target="#submenu-1">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+          <ul class="sidebar-nav-dropdown collapse" id="submenu-1">
+            <li class="active"><a href="publishing.html"><i class="fa fa-fw fa-angle-right"></i> index</a></li>
+            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Draft</a></li>
+            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Review</a></li>
+            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Propose</a></li>
+          </ul>
+        </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
            <li>
-          <a href="../../library.html">
+          <a href="library.html">
             <i class=" icon-folder"></i>
             Bookcase
           </a>
@@ -98,14 +117,15 @@
         </li>
         </li>
          <li>
-          <a href="../../flip.html">
+          <a href="flip.html">
             <i class=" icon-eye"></i>
             Flip Handbook
           </a>
         </li>
+          </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
-          <a href="../../faq.html">
+          <a href="faq.html">
             <i class="icon-info"></i>
             FAQs
           </a>
@@ -115,7 +135,7 @@
     <!--/. Menu -->
 
     <!-- Page content -->
-    <main class="page-content">
+     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container">
           <div class="row">
@@ -123,52 +143,82 @@
               <button type="button" class="btn navbar-btn btn-link pull-left" data-toggle="sidebar-primary"><i class="fa fa-fw text-white fa-align-justify"></i></button>
             </div><!-- /.col -->
             <div class="col-xs-6 text-center">
-              <a class="navbar-brand" href="gallery.html#link">
+              <a class="navbar-brand" href="publishing.html#link">
                 <!-- <img class="brand-logo" alt="Logo" src="assets/img/logo-white.png"> -->
-                <span class="brand-name">Learning Git</span>
+                <span class="brand-name">Dashboard</span>
               </a>
+            </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </nav><!-- /.navbar.navbar-inverse -->
-     <!-- ============================================================= -->
-     <section class="section-xs bg-info">
+
+ <section class="section-xs bg-success">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-code"></i> Code training</strong>
+              <strong><i class="fa fa-fw fa-gears"></i> “A team is not a group of people that work together. A team is a group of people that trust each other.”  ~Simon Sinek</strong>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </section>
-      <!-- ============================================================= -->
       <section class="section-sm">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
-           <div class="col-md-12">
-              <h3 class="headline"> Try Git right in your web browser.</h3>
-            </div>
-          </div>
-          <br>
-          <div class="video-container-iframe">
-          <iframe src="https://docs.google.com/document/d/1l9hmsq2-3EjucPNKygT8TEk1FUBBLrVQgp6nmtSZqls/pub?embedded=true" style="border:0px #000000 solid;" name="Git" scrolling="no" align="center" height="1200" width="100%"></iframe>
-          </div>
-          <br>
-       <!-- ============================================================= -->
-     <section class="section-xs bg-warning">
+            <div class="col-sm-12">
+              <h1 class="headline">Versus V4.0</h1>
+            </div><!-- /.col -->
+          </div><!-- /.row -->
+
+  <!-- Responsive iFrame for Peeragogy Map-->
+    <section class="section-sm">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-smile-o"></i> Have a nice learning</strong>
-            </div><!-- /.col -->
-          </div><!-- /.row -->
+              <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <h4 class="panel-heading">Ongoing activity:</h4>
+                <div class="panel-body">
+                  <p>This is an ongoing collection of activities and task currently open by our working groups. If you enjoy learning by doing and you want to help or collaborate in a particular task, you are very welcome.
+                     Contact directly the people and groups interested in the following list. They will be happy to welcome you and explain to you how you can contribute to the project.     <strong>Inspire on!!</strong>  </p>
+                </div><!-- /.panel-body -->
+                <!-- Table -->
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Section</th>
+                      <th>Read</th>
+                      <th>Edit</th>
+                      <th>Action</th>
+                      <th>Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Foreword</td>
+                      <th><a href="https://goo.gl/fSh2n9"target="_blank">Amanda Lyons</a></th>
+                      <th> <td><a class="btn btn-default btn-sm btn-primary" href="tables.html#">Take action</a></td></th>
+                      <td>
+                        <div class="progress no-margin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+                            <span class="sr-only">Progress</span>
+                          </div><!-- /.progress-bar -->
+                        </div><!-- /.progress -->
+                      </td>
+                    </tr>
+
+                       </tbody>
+                     </table>
+                   </div>
+                  <!-- /.panel -->
+                 </div><!-- /.col -->
+                </div><!-- /.progress-bar -->
+              </div><!-- /.progress -->
+
         </div><!-- /.container -->
       </section>
- <!-- - Training--============================================================= -->
-      <section class="section-sm">
-          <div class="video-container-iframe">
-          <iframe src="https://training.github.com/kit/" style="border:0px #000000 solid;" name="Git" scrolling="auto" align="center" height="1200" width="100%"></iframe>
-            </div>
-            </div><!-- /.dashboard-wrapper -->
+      </div><!-- /.dashboard-wrapper -->
  <!-- ============================================================= -->
 
 
@@ -180,6 +230,17 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
   <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 
   <!-- Plugins -->
   <script src="../../assets/prism/prism.js"></script>
