--- a/Dashboard-V1.1.5/Collaborate/wraiting/draft.html
+++ b/Dashboard-V1.1.5/Collaborate/wraiting/draft.html
@@ -176,11 +176,11 @@
                 <strong><i class="fa fa-fw fa-check-circle-o"></i> Success:</strong> All your changes have been saved!
               </div><!-- /.alert -->
               <div class="form-group">
-                <label for="post-title">Chapter Title:</label>
+                <label for="post-title">Article Title:</label>
                 <input type="text" class="form-control" id="post-title" placeholder="Title">
               </div>
               <div class="form-group">
-                <label for="post-sub-title">Authors:</label>
+                <label for="post-sub-title">Co-editors:</label>
                 <input type="text" class="form-control" id="post-sub-title" placeholder="Team list">
               </div>
               <div class="form-group">
