fix all new manu sidebars

--- a/Dashboard-V1.1.5/Collaborate/wraiting/index2.html
+++ b/Dashboard-V1.1.5/Collaborate/wraiting/index2.html
@@ -50,8 +50,8 @@
       </div><!-- /.sidebar-subheader -->
 
      <!-- Menu -->
-     <ul class="sidebar-nav">
-        <li class="active">
+      <ul class="sidebar-nav">
+        <li>
           <a href="index.html">
             <i class="icon-home"></i>
             Home
@@ -91,17 +91,17 @@
           </a>
         </li>
          <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
-          <li>
-          <a data-toggle="collapse" data-target="#submenu-1">
+         <li class="active">
+          <a href="publishing.html">
             <i class="icon-note"></i>
             Collaborate
           </a>
-          <ul class="sidebar-nav-dropdown collapse" id="submenu-1">
-            <li class="active"><a href="publishing.html"><i class="fa fa-fw fa-angle-right"></i> index</a></li>
-            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Draft</a></li>
-            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Review</a></li>
-            <li><a href="publishing.html#link"><i class="fa fa-fw fa-angle-right"></i> Propose</a></li>
-          </ul>
+        </li>
+        <li>
+         <a href="Collaborate/wraiting/draft.html">
+            <i class="icon-fire"></i>
+            Draft
+          </a>
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
            <li>
