--- a/Dashboard-V1.1.5/flip.html
+++ b/Dashboard-V1.1.5/flip.html
@@ -71,13 +71,12 @@
             Events
           </a>
         </li>
-         <li>
+        <li>
           <a href="training.html">
             <i class=" icon-fire"></i>
             Training
           </a>
            <li>
-         <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -89,6 +88,19 @@
           <a href="location.html">
             <i class="icon-map"></i>
             Members Map
+          </a>
+        </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+         <li>
+          <a href="publishing.html">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+        </li>
+        <li>
+         <a href="Collaborate/wraiting/draft.html">
+            <i class="icon-fire"></i>
+            Draft
           </a>
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
@@ -110,6 +122,7 @@
             Flip Handbook
           </a>
         </li>
+          </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
           <a href="faq.html">
@@ -120,6 +133,7 @@
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
     <!--/. Menu -->
+
     <!-- Page content -->
    <!-- Message -->
     <!-- Page content -->
