--- a/Dashboard-V1.1.5/timeline.html
+++ b/Dashboard-V1.1.5/timeline.html
@@ -48,7 +48,7 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
       </div><!-- /.sidebar-subheader -->
-      <!-----menu!------------------------------>
+      <!-- Menu -->
       <ul class="sidebar-nav">
         <li class="active">
           <a href="index.html">
@@ -58,12 +58,24 @@
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
          <li>
+          <a href="task.html">
+            <i class="icon-target"></i>
+           Tasks
+          </a>
+        </li>
+         <li>
            <li>
           <a href="tables.html">
             <i class="icon-pin"></i>
             Events
           </a>
         </li>
+        <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -75,6 +87,19 @@
           <a href="location.html">
             <i class="icon-map"></i>
             Members Map
+          </a>
+        </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+         <li>
+          <a href="publishing.html">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+        </li>
+        <li>
+         <a href="Collaborate/wraiting/draft.html">
+            <i class="icon-fire"></i>
+            Draft
           </a>
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
@@ -96,10 +121,17 @@
             Flip Handbook
           </a>
         </li>
+          </li>
+         <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
+         <li>
+          <a href="faq.html">
+            <i class="icon-info"></i>
+            FAQs
+          </a>
           </a>
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
-    <!-----menu!------------------------------>
+    <!--/. Menu -->
 
     <!-- Page content -->
     <main class="page-content">
