--- a/Dashboard-V1.1.5/info.html
+++ b/Dashboard-V1.1.5/info.html
@@ -47,7 +47,7 @@
         <form role="search">
           <input type="text" class="form-control" placeholder="Search">
         </form>
-       <!-- Menu -->
+        <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
           <a href="index.html">
@@ -69,13 +69,12 @@
             Events
           </a>
         </li>
-         <li>
+        <li>
           <a href="training.html">
             <i class=" icon-fire"></i>
             Training
           </a>
            <li>
-         <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -87,6 +86,19 @@
           <a href="location.html">
             <i class="icon-map"></i>
             Members Map
+          </a>
+        </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+         <li>
+          <a href="publishing.html">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+        </li>
+        <li>
+         <a href="Collaborate/wraiting/draft.html">
+            <i class="icon-fire"></i>
+            Draft
           </a>
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
@@ -108,9 +120,10 @@
             Flip Handbook
           </a>
         </li>
+          </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li class="active">
-          <a href="info.html">
+          <a href="faq.html">
             <i class="icon-info"></i>
             FAQs
           </a>
@@ -118,6 +131,7 @@
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
     <!--/. Menu -->
+
     <!-- Page content -->
     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
