--- a/Dashboard-V1.1.5/task.html
+++ b/Dashboard-V1.1.5/task.html
@@ -48,7 +48,7 @@
         </form>
       </div><!-- /.sidebar-subheader -->
 
-     <!-- Menu -->
+      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
           <a href="index.html">
@@ -70,13 +70,12 @@
             Events
           </a>
         </li>
-         <li>
+        <li>
           <a href="training.html">
             <i class=" icon-fire"></i>
             Training
           </a>
            <li>
-         <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -88,6 +87,19 @@
           <a href="location.html">
             <i class="icon-map"></i>
             Members Map
+          </a>
+        </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+         <li>
+          <a href="publishing.html">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+        </li>
+        <li>
+         <a href="Collaborate/wraiting/draft.html">
+            <i class="icon-fire"></i>
+            Draft
           </a>
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
@@ -109,6 +121,7 @@
             Flip Handbook
           </a>
         </li>
+          </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
           <a href="faq.html">
@@ -119,6 +132,7 @@
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
     <!--/. Menu -->
+
     <!-- Page content -->
     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
