--- a/Dashboard-V1.1.5/training.html
+++ b/Dashboard-V1.1.5/training.html
@@ -50,7 +50,7 @@
 
      <!-- Menu -->
       <ul class="sidebar-nav">
-        <li class="active">
+        <li>
           <a href="index.html">
             <i class="icon-home"></i>
             Home
@@ -70,7 +70,7 @@
             Events
           </a>
         </li>
-        <li>
+        <li class="active">
           <a href="training.html">
             <i class=" icon-fire"></i>
             Training
@@ -87,6 +87,19 @@
           <a href="location.html">
             <i class="icon-map"></i>
             Members Map
+          </a>
+        </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+         <li>
+          <a href="publishing.html">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+        </li>
+        <li>
+         <a href="Collaborate/wraiting/draft.html">
+            <i class="icon-fire"></i>
+            Draft
           </a>
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
@@ -108,6 +121,7 @@
             Flip Handbook
           </a>
         </li>
+          </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
           <a href="faq.html">
@@ -118,6 +132,7 @@
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
     <!--/. Menu -->
+
     <!-- Page content -->
     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
