--- a/Dashboard-V1.1.5/training/git/1-git.html
+++ b/Dashboard-V1.1.5/training/git/1-git.html
@@ -52,26 +52,32 @@
      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
-          <a href="../../index.html">
+          <a href="index.html">
             <i class="icon-home"></i>
             Home
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
          <li>
-          <a href="../../task.html">
+          <a href="task.html">
             <i class="icon-target"></i>
            Tasks
           </a>
         </li>
          <li>
            <li>
-          <a href="../../tables.html">
+          <a href="tables.html">
             <i class="icon-pin"></i>
             Events
           </a>
         </li>
-         <li class="../../active">
+        <li class="active">
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
@@ -79,14 +85,27 @@
         </li>
          <li>
            <li>
-          <a href="../../location.html">
+          <a href="location.html">
             <i class="icon-map"></i>
             Members Map
           </a>
         </li>
+         <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
+         <li>
+          <a href="publishing.html">
+            <i class="icon-note"></i>
+            Collaborate
+          </a>
+        </li>
+        <li>
+         <a href="Collaborate/wraiting/draft.html">
+            <i class="icon-fire"></i>
+            Draft
+          </a>
+        </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
            <li>
-          <a href="../../library.html">
+          <a href="library.html">
             <i class=" icon-folder"></i>
             Bookcase
           </a>
@@ -98,14 +117,15 @@
         </li>
         </li>
          <li>
-          <a href="../../flip.html">
+          <a href="flip.html">
             <i class=" icon-eye"></i>
             Flip Handbook
           </a>
         </li>
+          </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
-          <a href="../../faq.html">
+          <a href="faq.html">
             <i class="icon-info"></i>
             FAQs
           </a>
