fix training page

--- a/Dashboard-V1.1.5/faq.html
+++ b/Dashboard-V1.1.5/faq.html
@@ -170,7 +170,7 @@
                                 <small>Frequently Asked Questions</small>
                             </h1>
                             <ol class="breadcrumb">
-                                <li><i class="fa fa-dashboard"></i>  <a href="https://github.com/Peeragogy/peeragogy-handbook/wiki/Quickstart-guide" target="_blank" >Quickstart guide</a>
+                                <li><i class="fa fa-dashboard"></i>  <a href="info.html" target="_blank" >Quickstart guide</a>
 
                             </ol>
                         </div>
