--- a/Dashboard-V1.1.5/info.html
+++ b/Dashboard-V1.1.5/info.html
@@ -156,7 +156,7 @@
           <div class="col-xs-12 text-center">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-wrench"></i> Status:</strong> V1.1.1 "Go Charles Go"
+              <strong><i class="fa fa-fw fa-wrench"></i> Status:</strong> V1.1.5 "Quijano"
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
