add comments on table

--- a/Dashboard-V1.1.5/publishing.html
+++ b/Dashboard-V1.1.5/publishing.html
@@ -156,8 +156,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong> This section is still under development.
-              If you want to jump in a task and help us to complete it... just ping us <a style="color: #fff000;" href="mailto:fabrizio.terzi@gmail.com"> <i class="fa fa-fw fa-envelope"></i></a></strong>
+              <strong>This section is a work in progress. If you find bugs or have feature requests, please let us know. <a style="color: #fff000;" href="mailto:fabrizio.terzi@gmail.com"> <i class="fa fa-fw fa-envelope"></i></a></strong>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
@@ -191,7 +190,7 @@
                       <th>Chapters</th>
                       <th>Read</th>
                       <th>Edit</th>
-                      <th>Review</th>
+                      <th>Comments</th>
                       <th>V3.0</th>
                       <th>V4.0</th>
                       <th>Status</th>
@@ -963,8 +962,8 @@
       </section>
   <!--AudioFoot-->
         <audio  controls="controls" hidden="hidden" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 1000)" >
-         <source src="http://freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/ogg"></source>
-         <source src="http://freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/mpeg"></source>
+         <source src="http//freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/ogg"></source>
+         <source src="http//freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/mpeg"></source>
         </audio>
        <!--./AudioFoot-->
   <!-- last but not least the javascript -->
