--- a/Dashboard-V1.1.5/publishing.html
+++ b/Dashboard-V1.1.5/publishing.html
@@ -944,13 +944,7 @@
                         </div><!-- /.progress -->
                       </td>
                     </tr>
-                     <!--./License/Waivere-->
-
-
-
-
-
-
+                     <!--./License/Waivere--
                      </table>
                    </div>
                   <!-- /.panel -->
@@ -962,8 +956,8 @@
       </section>
   <!--AudioFoot-->
         <audio  controls="controls" hidden="hidden" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 1000)" >
-         <source src="http//freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/ogg"></source>
-         <source src="http//freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/mpeg"></source>
+         <source src="http://freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/ogg"></source>
+         <source src="http://freesound.org/data/previews/138/138049_2423928-lq.mp3" type="audio/mpeg"></source>
         </audio>
        <!--./AudioFoot-->
   <!-- last but not least the javascript -->
