add new task and update video gallery

--- a/Dashboard-V1.1.5/gallery.html
+++ b/Dashboard-V1.1.5/gallery.html
@@ -170,10 +170,10 @@
           </div><!-- /.row -->
           <br/>
           <div class="video-container">
-           <iframe width="800" height="450" src="http://polr.me/2il" frameborder="0" allowfullscreen></iframe>
+           <iframe width="800" height="450" src="https://www.youtube.com/embed/OXB8e3NIoBc" frameborder="0" allowfullscreen></iframe>
             </div>
                <p class="text-center">
-                 <a href="https://wikimania2015.wikimedia.org/wiki/Wikimania" class="btn btn-success">Join Wikimanía México 2015!</a>
+                 <a href="" class="btn btn-success">Community Hangout 3-August-2015</a>
                   </p>
                <br>
         <!-- ============================================================= -->
