--- a/Dashboard-V1.1.5/task.html
+++ b/Dashboard-V1.1.5/task.html
@@ -192,7 +192,7 @@
                       <th><a href="task.html"target="_blank">Editorial Team</a></th>
                       <td>
                         <div class="progress no-margin">
-                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
                             <span class="sr-only">Progress</span>
                           </div><!-- /.progress-bar -->
                         </div><!-- /.progress -->
@@ -203,10 +203,22 @@
                     <tr>
                       <td>2</td>
                       <td>Dashboard Development</td>
-                      <th><a href="https://it.linkedin.com/in/bergamohub001"target="_blank">Fabrizio Terzi</a></th>
+                      <th><a href="https://it.linkedin.com/in/bergamohub001"target="_blank">Design Team</a></th>
                       <td>
                         <div class="progress no-margin">
                           <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            <span class="sr-only">Progress</span>
+                          </div><!-- /.progress-bar -->
+                        </div><!-- /.progress -->
+                      </td>
+                    </tr>
+                     <tr>
+                      <td>3</td>
+                      <td>Peeragogy Charter - Draft</td>
+                      <th><a href="http://polr.me/2tg"target="_blank">Google Doc</a></th>
+                      <td>
+                        <div class="progress no-margin">
+                          <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
                             <span class="sr-only">Progress</span>
                           </div><!-- /.progress-bar -->
                         </div><!-- /.progress -->
@@ -216,7 +228,7 @@
                      <tr></tr>
                     </tr>
                     <tr>
-                      <td>3</td>
+                      <td>4</td>
                       <h3><td><span class="label label-danger">G+ Community Engagement</span></td></h3>
                       <th></th>
                       <td>
