New peeragogy.io theme #Task

--- a/Dashboard-V1.1.5/task.html
+++ b/Dashboard-V1.1.5/task.html
@@ -229,11 +229,11 @@
                     </tr>
                      <tr>
                       <td>4</td>
-                      <td>New "Ghost editor" enviroment</td>
-                      <th><a href="http://polr.me/2v2"target="_blank">github</a></th>
+                      <td>New peeragogy.io theme for V4.0</td>
+                      <th><a href="http://polr.me/2wf"target="_blank">Github</a></th>
                       <td>
                         <div class="progress no-margin">
-                          <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                             <span class="sr-only">Progress</span>
                           </div><!-- /.progress-bar -->
                         </div><!-- /.progress -->
