point new #task on Google post

--- a/Dashboard-V1.1.5/task.html
+++ b/Dashboard-V1.1.5/task.html
@@ -230,7 +230,7 @@
                      <tr>
                       <td>4</td>
                       <td>New peeragogy.io theme for V4.0</td>
-                      <th><a href="http://polr.me/2wf"target="_blank">Github</a></th>
+                      <th><a href="http://polr.me/2wi"target="_blank">Google post</a></th>
                       <td>
                         <div class="progress no-margin">
                           <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
