--- a/tables.html
+++ b/tables.html
@@ -196,15 +196,15 @@
                      <tr>
                       <td>MIT App Inventor Peeragogy</td>
                       <td>MOOc Edx</td>
-                      <td>Starts October 19, 2015 </td>
+                      <td>October 19, 2015 </td>
                        <td><a href="https://www.edx.org/course/mobile-computing-app-inventor-cs-trinityx-t002x">Enroll now</a></td></td>
                       <td>No</td>
                       <td><a class="btn btn-info btn-sm" "https://www.edx.org/course/mobile-computing-app-inventor-cs-trinityx-t002x" target="_blank">Join!</a></td>
                     </tr>
                     <tr>
                       <td>Global Collaboration day</td>
-                      <td>Worldwide</td>
-                      <td>Starts September 17, 2015 </td>
+                      <td>Yearly</td>
+                      <td>September 17, 2015 </td>
                        <td><a href="http://www.stevehargadon.com/">Create an event now</a></td></td>
                       <td>No</td>
                       <td><a class="btn btn-info btn-sm" "https://www.edx.org/course/mobile-computing-app-inventor-cs-trinityx-t002x" target="_blank">Join!</a></td>
